fixed spacing in About page in small device

--- a/src/style.css
+++ b/src/style.css
@@ -212,7 +212,7 @@ i {
   .page-container {
     display: flex;
     justify-content: center;
-    padding: none;
+    padding: 20px;
     text-align: center;
   }
 
